proto file should be enough

--- a/TME5/Makefile
+++ b/TME5/Makefile
@@ -2,7 +2,7 @@ PROTOBUF_PATH ?= /usr/local/protobuf-master/src
 GRPC_JAVA_PATH ?= /usr/local/grpc-java-master/compiler/build/exe/java_plugin/protoc-gen-grpc-java
 JAVA_SRC_DIR := src
 PROTO_SRC_DIR := proto
-PROTO_JAVA_DIR := $(JAVA_SRC_DIR)/srcs/proto
+PROTO_JAVA_DIR := $(JAVA_SRC_DIR)/srcs/chat/proto
 PROTO_SRC := $(wildcard proto/*.proto)
 PROTO_JAVA := $(patsubst $(PROTO_SRC_DIR)/%.proto,$(PROTO_JAVA_DIR)/%.java,$(PROTO_SRC))
 
